--- a/Alexnet/Alexnet_GTSRB.ipynb
+++ b/Alexnet/Alexnet_GTSRB.ipynb
@@ -22,10 +22,10 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Downloading: \"https://github.com/pytorch/vision/zipball/v0.10.0\" to /root/.cache/torch/hub/v0.10.0.zip\n",
-            "/usr/local/lib/python3.8/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and will be removed in 0.15, please use 'weights' instead.\n",
+            "Downloading: \"https://github.com/pytorch/vision/zipball/v0.10.0\" to /Users/vishalkarmakar/.cache/torch/hub/v0.10.0.zip\n",
+            "/Users/vishalkarmakar/opt/anaconda3/envs/snowflakes/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
             "  warnings.warn(\n",
-            "/usr/local/lib/python3.8/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and will be removed in 0.15. The current behavior is equivalent to passing `weights=None`.\n",
+            "/Users/vishalkarmakar/opt/anaconda3/envs/snowflakes/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
             "  warnings.warn(msg)\n"
           ]
         },
@@ -148,7 +148,7 @@
         "id": "C9cP0zeztAm3"
       },
       "source": [
-        "Hyper Parameters"
+        "<h2>Hyper Parameters</h2>"
       ]
     },
     {
@@ -170,20 +170,18 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(device)\n",
         "if torch.cuda.is_available():\n",
-        "    model.cuda()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "0_oNHE7Zs_6s"
-      },
-      "outputs": [],
-      "source": [
+        "    model.cuda()\n",
+        "\n",
         "# Loss and optimizer\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2>Training Loop </h2>"
       ]
     },
     {
@@ -243,6 +241,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2>Accuracy versus Steps</h2>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
@@ -283,6 +288,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2> Loss versus Steps </h2>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
@@ -320,6 +332,13 @@
         "pyplot.plot(train_loss)\n",
         "\n",
         "pyplot.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2> Testing Loop </h2>"
       ]
     },
     {
@@ -373,6 +392,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2> Testing Accuracy & Validation Loss </h2>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
@@ -404,6 +430,13 @@
       "source": [
         "for epoch in range(1):\n",
         "  evaluate(test_dataLoader)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2> Confusion Matrix </h2>"
       ]
     },
     {
@@ -452,6 +485,13 @@
         "    \n",
         "labels_arr = range(0, num_classes)\n",
         "plot_confusion_matrix(lable_given_img, pred_y, labels_arr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2>Precision, Recall, F1-Score </h2>"
       ]
     },
     {
@@ -528,6 +568,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2> Visualizing Training and Testing Dataset </h2>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -542,7 +589,21 @@
         "    plt.figure(figsize=(16,8))\n",
         "    plt.axis('off')\n",
         "    plt.imshow(make_grid(images, nrow=8).permute((1, 2, 0)))\n",
-        "    break"
+        "    break\n",
+        "\n",
+        "for images, _ in train_dataLoader:\n",
+        "    plt.figure(figsize=(16,8))\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(make_grid(images, nrow=8).permute((1, 2, 0)))\n",
+        "    break\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h2>Saving Model</h2>"
       ]
     },
     {
@@ -575,7 +636,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.10.6"
     },
     "vscode": {
