--- a/Alexnet/Alexnet_GTSRB.ipynb
+++ b/Alexnet/Alexnet_GTSRB.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<h1>Alexnet CNN</h1>"
+        "<h1>Alexnet CNN - GTSRB</h1>"
       ]
     },
     {
