--- a/Resnet/resnet18_BTSD.ipynb
+++ b/Resnet/resnet18_BTSD.ipynb
@@ -1,66 +1,60 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KHC8-85G--uf"
+      },
+      "source": []
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "mCh_0fwASxCe",
-        "outputId": "2222dac1-27c5-4ecc-e1dc-5a0dc1242aa4"
+        "id": "S1NkGRACTFd1",
+        "outputId": "50260516-1a8f-444c-c85a-54d4c87eff7a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "--2022-11-13 18:42:44--  https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
+            "--2022-12-02 22:18:54--  https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
             "Resolving btsd.ethz.ch (btsd.ethz.ch)... 129.132.52.168, 2001:67c:10ec:36c2::168\n",
             "Connecting to btsd.ethz.ch (btsd.ethz.ch)|129.132.52.168|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 174298785 (166M) [application/zip]\n",
             "Saving to: ‘BelgiumTSC_Training.zip’\n",
             "\n",
-            "BelgiumTSC_Training 100%[===================>] 166.22M  6.38MB/s    in 27s     \n",
+            "BelgiumTSC_Training 100%[===================>] 166.22M  3.56MB/s    in 25s     \n",
             "\n",
-            "2022-11-13 18:43:12 (6.16 MB/s) - ‘BelgiumTSC_Training.zip’ saved [174298785/174298785]\n",
+            "2022-12-02 22:19:20 (6.55 MB/s) - ‘BelgiumTSC_Training.zip’ saved [174298785/174298785]\n",
             "\n",
-            "--2022-11-13 18:43:12--  https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
+            "--2022-12-02 22:19:20--  https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
             "Resolving btsd.ethz.ch (btsd.ethz.ch)... 129.132.52.168, 2001:67c:10ec:36c2::168\n",
             "Connecting to btsd.ethz.ch (btsd.ethz.ch)|129.132.52.168|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 77877833 (74M) [application/zip]\n",
             "Saving to: ‘BelgiumTSC_Testing.zip’\n",
             "\n",
-            "BelgiumTSC_Testing. 100%[===================>]  74.27M  6.24MB/s    in 13s     \n",
+            "BelgiumTSC_Testing. 100%[===================>]  74.27M  8.64MB/s    in 9.6s    \n",
             "\n",
-            "2022-11-13 18:43:25 (5.90 MB/s) - ‘BelgiumTSC_Testing.zip’ saved [77877833/77877833]\n",
+            "2022-12-02 22:19:31 (7.70 MB/s) - ‘BelgiumTSC_Testing.zip’ saved [77877833/77877833]\n",
             "\n"
           ]
         }
       ],
       "source": [
         "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
-        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
+        "\n",
         "import zipfile\n",
         "with zipfile.ZipFile('/content/BelgiumTSC_Training.zip', 'r') as zip_ref:\n",
-        "    zip_ref.extractall('/content/')"
-      ],
-      "metadata": {
-        "id": "dHVYUmG8TpWc"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "    zip_ref.extractall('/content/')\n",
+        "\n",
         "import torch\n",
         "import numpy as np\n",
         "import torchvision.transforms as transforms\n",
@@ -74,6 +68,8 @@
         "import torchvision.datasets as datasets\n",
         "\n",
         "\n",
+        "test_path = '/content/Testing'\n",
+        "train_path = '/content/Training'\n",
         "\n",
         "preprocess = transforms.Compose([\n",
         "    transforms.Resize((224,224)),\n",
@@ -83,29 +79,19 @@
         "        std=[0.2023, 0.1994, 0.2010],\n",
         "    ),\n",
         "])\n",
-        "train_path = \"/content/Training\"\n",
-        "#test_path = \"/content/Testing\"\n",
         "\n",
-        "#data set from https://btsd.ethz.ch/shareddata/\n",
         "data = torchvision.datasets.ImageFolder(root=train_path, transform=preprocess)\n",
-        "\n",
-        "#train_data_loader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle=True,  num_workers=0)\n",
         "\n",
         "train_size = int(0.8 * len(data))\n",
         "test_size = len(data) - train_size\n",
         "train_dataset, test_dataset = torch.utils.data.random_split(data, [train_size, test_size])\n",
         "train_data_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True,  num_workers=0)\n",
         "test_data_loader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=True,  num_workers=0)"
-      ],
-      "metadata": {
-        "id": "S1NkGRACTFd1"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "En_h1-h3SxCg"
       },
@@ -189,7 +175,7 @@
         "use_cuda = torch.cuda.is_available()\n",
         "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "\n",
-        "model = ResNet(ResidualBlock, [3, 4, 6, 3]).to(device)\n",
+        "model = ResNet(ResidualBlock, [2, 2, 2, 2]).to(device)\n",
         "\n",
         "# Loss and optimizer\n",
         "criterion = nn.CrossEntropyLoss()\n",
@@ -212,31 +198,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLjWiTJvSxCh",
-        "outputId": "61486f75-bdee-453a-a176-d5b008b2cd54"
+        "outputId": "229a7b4c-1a05-4b48-89c1-757c5765c919"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Training set: Epoch [1/20], Loss: 2.5078,  Accuracy: 41.67%, \n",
-            "Test set: Epoch [1/20], Loss: 2.7122,  Accuracy: 33.22%, \n",
-            "Training set: Epoch [2/20], Loss: 1.6949,  Accuracy: 50.00%, \n",
-            "Test set: Epoch [2/20], Loss: 1.7247,  Accuracy: 55.63%, \n",
-            "Training set: Epoch [3/20], Loss: 1.0967,  Accuracy: 75.00%, \n",
-            "Test set: Epoch [3/20], Loss: 1.2546,  Accuracy: 60.44%, \n",
-            "Training set: Epoch [4/20], Loss: 0.6641,  Accuracy: 91.67%, \n",
-            "Test set: Epoch [4/20], Loss: 1.7590,  Accuracy: 77.49%, \n",
-            "Training set: Epoch [5/20], Loss: 0.5184,  Accuracy: 83.33%, \n",
-            "Test set: Epoch [5/20], Loss: 0.7061,  Accuracy: 82.84%, \n",
-            "Training set: Epoch [6/20], Loss: 1.0672,  Accuracy: 66.67%, \n",
-            "Test set: Epoch [6/20], Loss: 2.0314,  Accuracy: 68.31%, \n",
-            "Training set: Epoch [7/20], Loss: 0.7900,  Accuracy: 75.00%, \n",
-            "Test set: Epoch [7/20], Loss: 0.4725,  Accuracy: 81.09%, \n",
-            "Training set: Epoch [8/20], Loss: 0.5016,  Accuracy: 75.00%, \n",
-            "Test set: Epoch [8/20], Loss: 0.6602,  Accuracy: 86.23%, \n",
-            "Training set: Epoch [9/20], Loss: 0.3504,  Accuracy: 100.00%, \n",
-            "Test set: Epoch [9/20], Loss: 0.4220,  Accuracy: 87.98%, \n"
+            "Training set: Epoch [1/20], Loss: 2.2777,  Accuracy: 41.67%, \n",
+            "Test set: Epoch [1/20], Loss: 3.0384,  Accuracy: 34.43%, \n",
+            "Training set: Epoch [2/20], Loss: 2.4316,  Accuracy: 33.33%, \n",
+            "Test set: Epoch [2/20], Loss: 1.6687,  Accuracy: 48.96%, \n",
+            "Training set: Epoch [3/20], Loss: 1.2934,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [3/20], Loss: 1.7455,  Accuracy: 59.23%, \n",
+            "Training set: Epoch [4/20], Loss: 1.0284,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [4/20], Loss: 1.3803,  Accuracy: 72.57%, \n",
+            "Training set: Epoch [5/20], Loss: 0.9353,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [5/20], Loss: 1.7449,  Accuracy: 77.05%, \n",
+            "Training set: Epoch [6/20], Loss: 0.7256,  Accuracy: 75.00%, \n",
+            "Test set: Epoch [6/20], Loss: 0.8655,  Accuracy: 77.49%, \n",
+            "Training set: Epoch [7/20], Loss: 0.9587,  Accuracy: 75.00%, \n",
+            "Test set: Epoch [7/20], Loss: 0.7078,  Accuracy: 83.28%, \n",
+            "Training set: Epoch [8/20], Loss: 0.5263,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [8/20], Loss: 0.8777,  Accuracy: 83.50%, \n",
+            "Training set: Epoch [9/20], Loss: 0.6757,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [9/20], Loss: 1.6480,  Accuracy: 64.59%, \n",
+            "Training set: Epoch [10/20], Loss: 0.7776,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [10/20], Loss: 1.4550,  Accuracy: 80.22%, \n",
+            "Training set: Epoch [11/20], Loss: 0.1990,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [11/20], Loss: 0.5264,  Accuracy: 87.65%, \n",
+            "Training set: Epoch [12/20], Loss: 0.1694,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [12/20], Loss: 0.2887,  Accuracy: 91.69%, \n",
+            "Training set: Epoch [13/20], Loss: 0.5746,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [13/20], Loss: 0.4296,  Accuracy: 91.91%, \n",
+            "Training set: Epoch [14/20], Loss: 0.4348,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [14/20], Loss: 0.7327,  Accuracy: 87.76%, \n",
+            "Training set: Epoch [15/20], Loss: 0.1437,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [15/20], Loss: 0.2904,  Accuracy: 94.32%, \n",
+            "Training set: Epoch [16/20], Loss: 0.4154,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [16/20], Loss: 0.9619,  Accuracy: 83.72%, \n",
+            "Training set: Epoch [17/20], Loss: 0.0858,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [17/20], Loss: 0.3920,  Accuracy: 94.43%, \n",
+            "Training set: Epoch [18/20], Loss: 0.0630,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [18/20], Loss: 0.4057,  Accuracy: 96.28%, \n",
+            "Training set: Epoch [19/20], Loss: 0.1129,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [19/20], Loss: 0.0490,  Accuracy: 96.50%, \n",
+            "Training set: Epoch [20/20], Loss: 0.3819,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [20/20], Loss: 0.8964,  Accuracy: 92.79%, \n"
           ]
         }
       ],
@@ -294,15 +302,40 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "kfg9No6KSxCj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kfg9No6KSxCj",
+        "outputId": "8a03d305-25a9-479b-da90-024f01e6d599"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "training losses:[2.277665615081787, 2.431580066680908, 1.293378233909607, 1.0284194946289062, 0.9353227019309998, 0.7256467342376709, 0.9586862921714783, 0.5262979865074158, 0.6757228374481201, 0.7775514721870422, 0.19903551042079926, 0.169438436627388, 0.5746484398841858, 0.4348103702068329, 0.14366750419139862, 0.4154376685619354, 0.0858144760131836, 0.0630059465765953, 0.11287754029035568, 0.3819175958633423]\n",
+            "training accuracies:[41.66666666666667, 33.33333333333333, 66.66666666666666, 91.66666666666666, 83.33333333333334, 75.0, 75.0, 83.33333333333334, 83.33333333333334, 91.66666666666666, 100.0, 100.0, 91.66666666666666, 91.66666666666666, 100.0, 91.66666666666666, 100.0, 100.0, 100.0, 100.0]\n",
+            "test losses:[3.0384109020233154, 1.6686745882034302, 1.7454994916915894, 1.380332589149475, 1.744887113571167, 0.8655409812927246, 0.7077850103378296, 0.8777207732200623, 1.6480443477630615, 1.4550259113311768, 0.5264401435852051, 0.2887282371520996, 0.4295850992202759, 0.7326703071594238, 0.2903512120246887, 0.9619472026824951, 0.3920310437679291, 0.4056675136089325, 0.0490226075053215, 0.8963722586631775]\n",
+            "test accuracies:[34.42622950819672, 48.96174863387978, 59.234972677595636, 72.56830601092896, 77.04918032786885, 77.4863387978142, 83.27868852459017, 83.49726775956285, 64.59016393442623, 80.21857923497268, 87.65027322404372, 91.69398907103825, 91.91256830601094, 87.75956284153006, 94.31693989071039, 83.71584699453551, 94.42622950819673, 96.28415300546447, 96.50273224043715, 92.78688524590164]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"training losses:{training_losses}\")\n",
+        "print(f\"training accuracies:{training_accuracies}\")\n",
+        "print(f\"test losses:{test_losses}\")\n",
+        "print(f\"test accuracies:{test_accuracies}\")"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.13 64-bit (microsoft store)",
+      "display_name": "Python 3.9.12 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -316,19 +349,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.12"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "d2a1693a8671055a53c2c6d410efa674a57679ce80639da1bc70e7756fb26035"
+        "hash": "7cfc025ceceff32cb35ea2f2d9774b05621757ec95f72f3d845287f26358ffe2"
       }
-    },
-    "colab": {
-      "provenance": []
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
