--- a/Resnet/resnet50_BTSD.ipynb
+++ b/Resnet/resnet50_BTSD.ipynb
@@ -1,115 +1,72 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mCh_0fwASxCe",
-        "outputId": "59c5c376-d6a4-40b9-a4c7-c3ad4617d0f6"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
-      "source": [
-        "#instructions: https://github.com/Kaggle/kaggle-api\n",
-        "#https://www.kaggle.com/general/74235\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "path = '/content/drive/MyDrive/archive.zip'\n",
-        "import zipfile\n",
-        "with zipfile.ZipFile(path, 'r') as zip_ref:\n",
-        "    zip_ref.extractall('content')"
-      ],
-      "metadata": {
-        "id": "ZEd6MJyoDW2n"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#from kaggle.api.kaggle_api_extended import KaggleApi\n",
-        "#api = KaggleApi()\n",
-        "#api.authenticate()\n",
-        "#api.dataset_download_files(\"gpiosenka/callback-to-continue-or-halt-training-f1score-95\")\n",
-        "\n",
-        "#! mkdir /.kaggle\n",
-        "\n",
-        "#! cp kaggle.json /.kaggle/\n",
-        "\n",
-        "#! chmod 600 /.kaggle/kaggle.json\n",
-        "\n",
-        "#! kaggle datasets list\n",
-        "\n",
-        "#! kaggle datasets download -d gpiosenka/callback-to-continue-or-halt-training-f1score-95\n",
-        "#! kaggle kernels output gpiosenka/callback-to-continue-or-halt-training-f1score-95\n",
-        "#! kaggle competitions download -d gpiosenka/callback-to-continue-or-halt-training-f1score-95\n",
-        "#!kaggle datasets download -d 'gpiosenka/callback-to-continue-or-halt-training-f1score-95'\n",
-        "#!kaggle competitions download -c 'gpiosenka/callback-to-continue-or-halt-training-f1score-95'"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FJjXNqCe-_bA",
-        "outputId": "f4532e84-36d9-458d-8f78-1c60b9bda075"
-      },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Kernel log downloaded to /content/callback-to-continue-or-halt-training-f1score-95.log \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "ftdshml0Aw1k"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "KHC8-85G--uf"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "dHVYUmG8TpWc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
+        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
+        "\n",
+        "import zipfile\n",
+        "with zipfile.ZipFile('/content/BelgiumTSC_Training.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall('/content/')\n",
+        "\n",
+        "import torch\n",
+        "import numpy as np\n",
+        "import torchvision.transforms as transforms\n",
+        "import torchvision\n",
+        "import torch.utils.data as td\n",
+        "import matplotlib.pyplot as plt\n",
+        "import torch.nn as nn\n",
+        "from PIL import Image\n",
+        "import torch.nn.functional as F\n",
+        "import gc\n",
+        "import torchvision.datasets as datasets\n",
+        "\n",
+        "\n",
+        "test_path = '/content/Testing'\n",
+        "train_path = '/content/Training'\n",
+        "\n",
+        "preprocess = transforms.Compose([\n",
+        "    transforms.Resize((224,224)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(\n",
+        "        mean=[0.4914, 0.4822, 0.4465],\n",
+        "        std=[0.2023, 0.1994, 0.2010],\n",
+        "    ),\n",
+        "])\n",
+        "\n",
+        "data = torchvision.datasets.ImageFolder(root=train_path, transform=preprocess)\n",
+        "\n",
+        "train_size = int(0.8 * len(data))\n",
+        "test_size = len(data) - train_size\n",
+        "train_dataset, test_dataset = torch.utils.data.random_split(data, [train_size, test_size])\n",
+        "train_data_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True,  num_workers=0)\n",
+        "test_data_loader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=True,  num_workers=0)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S1NkGRACTFd1",
+        "outputId": "80c917ac-fae4-4f4d-f470-8de71e2e401e"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import numpy as np\n",
@@ -134,12 +91,9 @@
         "    ),\n",
         "])\n",
         "train_path = \"/content/content/Data_images/Train\"\n",
-        "#test_path = \"/content/Testing\"\n",
         "\n",
-        "#data set from https://btsd.ethz.ch/shareddata/\n",
         "data = torchvision.datasets.ImageFolder(root=train_path, transform=preprocess)\n",
         "\n",
-        "#train_data_loader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle=True,  num_workers=0)\n",
         "\n",
         "train_size = int(0.08 * len(data))\n",
         "test_size = int(len(data)*0.02)\n",
@@ -149,24 +103,6 @@
         "test_data_loader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=True,  num_workers=0)\n",
         "print(len(train_dataset))\n",
         "print(len(train_data_loader))"
-      ],
-      "metadata": {
-        "id": "S1NkGRACTFd1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "80c917ac-fae4-4f4d-f470-8de71e2e401e"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "7794\n",
-            "122\n"
-          ]
-        }
       ]
     },
     {
@@ -280,24 +216,7 @@
         "id": "HLjWiTJvSxCh",
         "outputId": "4775553b-6fa3-471e-cbe3-a1387c709602"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training set: Epoch [1/20], Loss: 4.1901,  Accuracy: 12.00%, \n",
-            "Test set: Epoch [1/20], Loss: 3.6454,  Accuracy: 12.32%, \n",
-            "Training set: Epoch [2/20], Loss: 3.3840,  Accuracy: 12.00%, \n",
-            "Test set: Epoch [2/20], Loss: 3.7921,  Accuracy: 18.69%, \n",
-            "Training set: Epoch [3/20], Loss: 2.8577,  Accuracy: 26.00%, \n",
-            "Test set: Epoch [3/20], Loss: 2.7589,  Accuracy: 28.59%, \n",
-            "Training set: Epoch [4/20], Loss: 2.2343,  Accuracy: 36.00%, \n",
-            "Test set: Epoch [4/20], Loss: 2.8501,  Accuracy: 36.34%, \n",
-            "Training set: Epoch [5/20], Loss: 1.6061,  Accuracy: 52.00%, \n",
-            "Test set: Epoch [5/20], Loss: 1.8092,  Accuracy: 46.05%, \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for epoch in range(num_epochs):\n",
         "    for i, (images, labels) in enumerate(train_data_loader):  \n",
@@ -359,8 +278,14 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.13 64-bit (microsoft store)",
+      "display_name": "Python 3.9.12 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -374,20 +299,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.12"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "d2a1693a8671055a53c2c6d410efa674a57679ce80639da1bc70e7756fb26035"
+        "hash": "7cfc025ceceff32cb35ea2f2d9774b05621757ec95f72f3d845287f26358ffe2"
       }
-    },
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
