--- a/Vgg16/vgg16_rmastif.ipynb
+++ b/Vgg16/vgg16_rmastif.ipynb
@@ -5813,7 +5813,7 @@
       },
       "outputs": [],
       "source": [
-        "PATH = '/content/Alex_rMastif.pt'\n",
+        "PATH = '/content/Vgg_rmastif.pt'\n",
         "torch.save({\n",
         "            'loss': train_loss,\n",
         "            'accuracy': accuracy_list,\n",
