--- a/Resnet/resnet34_BTSD.ipynb
+++ b/Resnet/resnet34_BTSD.ipynb
@@ -9,14 +9,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "dHVYUmG8TpWc"
       },
       "outputs": [],
       "source": [
-        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
-        "!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
+        "#!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Training.zip\n",
+        "#!wget https://btsd.ethz.ch/shareddata/BelgiumTSC/BelgiumTSC_Testing.zip\n",
         "\n",
         "import zipfile\n",
         "with zipfile.ZipFile('/content/BelgiumTSC_Training.zip', 'r') as zip_ref:\n",
@@ -39,13 +39,14 @@
         "train_path = '/content/Training'\n",
         "\n",
         "preprocess = transforms.Compose([\n",
-        "    transforms.Resize((224,224)),\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(\n",
-        "        mean=[0.4914, 0.4822, 0.4465],\n",
-        "        std=[0.2023, 0.1994, 0.2010],\n",
-        "    ),\n",
-        "])\n",
+        "      transforms.Resize(256),\n",
+        "      transforms.RandomHorizontalFlip(),\n",
+        "      transforms.RandomVerticalFlip(),\n",
+        "      transforms.RandomAutocontrast(),\n",
+        "      transforms.CenterCrop(224),\n",
+        "      transforms.ToTensor(),\n",
+        "      transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+        "  ])\n",
         "\n",
         "data = torchvision.datasets.ImageFolder(root=train_path, transform=preprocess)\n",
         "\n",
@@ -58,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "En_h1-h3SxCg"
       },
@@ -135,14 +136,13 @@
         "\n",
         "        return x\n",
         "\n",
-        "    num_classes = 205\n",
-        "num_epochs = 20\n",
-        "batch_size = 16\n",
-        "learning_rate = 0.01\n",
+        "num_epochs = 30\n",
+        "batch_size = 64\n",
+        "learning_rate = 0.001\n",
         "use_cuda = torch.cuda.is_available()\n",
         "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "\n",
-        "model = ResNet(ResidualBlock, [3, 4, 6, 3]).to(device)\n",
+        "model = ResNet(ResidualBlock, [3, 4, 6, 3],62).to(device)\n",
         "\n",
         "# Loss and optimizer\n",
         "criterion = nn.CrossEntropyLoss()\n",
@@ -151,23 +151,91 @@
         "\n",
         "# Train the model\n",
         "total_step = len(train_data_loader)\n",
-        "training_accuracies = []\n",
-        "training_losses = []\n",
-        "test_accuracies = []\n",
-        "test_losses = []"
+        "accuracy_list = []\n",
+        "steps_list = []\n",
+        "train_loss = []\n",
+        "test_accuracy = []\n",
+        "test_loss = []"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLjWiTJvSxCh",
-        "outputId": "4775553b-6fa3-471e-cbe3-a1387c709602"
+        "outputId": "e78d78d9-89b5-46c4-e4c4-ae87780cf009"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training set: Epoch [1/30], Loss: 3.5520,  Accuracy: 16.67%, \n",
+            "Test set: Epoch [1/30], Loss: 3.6346,  Accuracy: 14.54%, \n",
+            "Training set: Epoch [2/30], Loss: 3.5752,  Accuracy: 16.67%, \n",
+            "Test set: Epoch [2/30], Loss: 3.2235,  Accuracy: 22.73%, \n",
+            "Training set: Epoch [3/30], Loss: 2.3841,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [3/30], Loss: 2.5257,  Accuracy: 30.71%, \n",
+            "Training set: Epoch [4/30], Loss: 2.1417,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [4/30], Loss: 3.0442,  Accuracy: 34.97%, \n",
+            "Training set: Epoch [5/30], Loss: 3.4692,  Accuracy: 8.33%, \n",
+            "Test set: Epoch [5/30], Loss: 2.9213,  Accuracy: 38.36%, \n",
+            "Training set: Epoch [6/30], Loss: 2.5362,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [6/30], Loss: 2.4214,  Accuracy: 41.53%, \n",
+            "Training set: Epoch [7/30], Loss: 1.9589,  Accuracy: 41.67%, \n",
+            "Test set: Epoch [7/30], Loss: 2.3443,  Accuracy: 44.48%, \n",
+            "Training set: Epoch [8/30], Loss: 2.5562,  Accuracy: 41.67%, \n",
+            "Test set: Epoch [8/30], Loss: 2.4804,  Accuracy: 45.68%, \n",
+            "Training set: Epoch [9/30], Loss: 2.7534,  Accuracy: 33.33%, \n",
+            "Test set: Epoch [9/30], Loss: 2.8704,  Accuracy: 48.42%, \n",
+            "Training set: Epoch [10/30], Loss: 1.7708,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [10/30], Loss: 2.2159,  Accuracy: 52.46%, \n",
+            "Training set: Epoch [11/30], Loss: 1.5185,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [11/30], Loss: 1.4468,  Accuracy: 53.77%, \n",
+            "Training set: Epoch [12/30], Loss: 1.4889,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [12/30], Loss: 1.8815,  Accuracy: 55.41%, \n",
+            "Training set: Epoch [13/30], Loss: 1.7122,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [13/30], Loss: 2.6598,  Accuracy: 57.49%, \n",
+            "Training set: Epoch [14/30], Loss: 1.6196,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [14/30], Loss: 1.4032,  Accuracy: 60.22%, \n",
+            "Training set: Epoch [15/30], Loss: 1.8693,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [15/30], Loss: 1.8180,  Accuracy: 60.77%, \n",
+            "Training set: Epoch [16/30], Loss: 1.6796,  Accuracy: 58.33%, \n",
+            "Test set: Epoch [16/30], Loss: 1.8939,  Accuracy: 64.26%, \n",
+            "Training set: Epoch [17/30], Loss: 1.5159,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [17/30], Loss: 1.2735,  Accuracy: 60.66%, \n",
+            "Training set: Epoch [18/30], Loss: 1.0477,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [18/30], Loss: 1.2095,  Accuracy: 68.52%, \n",
+            "Training set: Epoch [19/30], Loss: 1.6377,  Accuracy: 50.00%, \n",
+            "Test set: Epoch [19/30], Loss: 1.2622,  Accuracy: 66.45%, \n",
+            "Training set: Epoch [20/30], Loss: 1.2579,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [20/30], Loss: 0.9839,  Accuracy: 72.24%, \n",
+            "Training set: Epoch [21/30], Loss: 1.0173,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [21/30], Loss: 1.0757,  Accuracy: 72.13%, \n",
+            "Training set: Epoch [22/30], Loss: 2.0812,  Accuracy: 58.33%, \n",
+            "Test set: Epoch [22/30], Loss: 0.4443,  Accuracy: 73.77%, \n",
+            "Training set: Epoch [23/30], Loss: 0.8498,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [23/30], Loss: 0.9713,  Accuracy: 75.30%, \n",
+            "Training set: Epoch [24/30], Loss: 1.0045,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [24/30], Loss: 1.1128,  Accuracy: 70.27%, \n",
+            "Training set: Epoch [25/30], Loss: 1.3821,  Accuracy: 58.33%, \n",
+            "Test set: Epoch [25/30], Loss: 0.7062,  Accuracy: 79.34%, \n",
+            "Training set: Epoch [26/30], Loss: 1.2666,  Accuracy: 75.00%, \n",
+            "Test set: Epoch [26/30], Loss: 1.2090,  Accuracy: 74.21%, \n",
+            "Training set: Epoch [27/30], Loss: 1.2779,  Accuracy: 66.67%, \n",
+            "Test set: Epoch [27/30], Loss: 0.9170,  Accuracy: 80.22%, \n",
+            "Training set: Epoch [28/30], Loss: 0.1472,  Accuracy: 100.00%, \n",
+            "Test set: Epoch [28/30], Loss: 1.1596,  Accuracy: 81.20%, \n",
+            "Training set: Epoch [29/30], Loss: 0.9543,  Accuracy: 83.33%, \n",
+            "Test set: Epoch [29/30], Loss: 0.8303,  Accuracy: 78.80%, \n",
+            "Training set: Epoch [30/30], Loss: 0.5179,  Accuracy: 91.67%, \n",
+            "Test set: Epoch [30/30], Loss: 0.7694,  Accuracy: 83.50%, \n"
+          ]
+        }
+      ],
       "source": [
         "for epoch in range(num_epochs):\n",
         "    for i, (images, labels) in enumerate(train_data_loader):  \n",
@@ -183,19 +251,20 @@
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
-        "        #accuracy\n",
-        "    total = labels.size(0)\n",
-        "    _,predicted = torch.max(outputs.data, 1)\n",
-        "    correct = (predicted == labels).sum().item()\n",
-        "    accuracy = (correct / total) * 100\n",
+        "        total = labels.size(0)\n",
+        "        _,predicted = torch.max(outputs.data, 1)\n",
+        "        correct = (predicted == labels).sum().item()\n",
+        "        accuracy = (correct / total) * 100\n",
+        "        steps = i + 1\n",
+        "        accuracy = (correct / total) * 100\n",
+        "        accuracy_list.append(accuracy)\n",
+        "        steps_list.append(steps)\n",
+        "        train_loss.append(loss.item())\n",
+        "\n",
         "\n",
         "    del images, labels, outputs\n",
         "    torch.cuda.empty_cache()\n",
         "    gc.collect()\n",
-        "    accuracy = (correct / total) * 100\n",
-        "    training_accuracies.append(accuracy)\n",
-        "    training_losses.append(loss.item())\n",
-        "\n",
         "    print ('Training set: Epoch [{}/{}], Loss: {:.4f},  Accuracy: {:.2f}%, ' \n",
         "                .format(epoch+1, num_epochs, loss.item(), accuracy))\n",
         "\n",
@@ -212,26 +281,68 @@
         "            loss_test = criterion(outputs, labels)\n",
         "            del images, labels, outputs\n",
         "        accuracy = (correct / total) * 100    \n",
-        "        test_accuracies.append(accuracy)\n",
-        "        test_losses.append(loss_test.item())\n",
+        "        test_accuracy.append(accuracy)\n",
+        "        test_loss.append(loss_test.item())\n",
         "        print ('Test set: Epoch [{}/{}], Loss: {:.4f},  Accuracy: {:.2f}%, ' \n",
-        "                    .format(epoch+1, num_epochs, loss_test.item(), accuracy))"
+        "                    .format(epoch+1, num_epochs, loss_test.item(), accuracy))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "kfg9No6KSxCj"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "PATH = '/content/RESNET_BTSD.pt'\n",
+        "torch.save({\n",
+        "            'model_state_dict': model.state_dict(),\n",
+        "            'optimizer_state_dict': optimizer.state_dict(),\n",
+        "            'loss': train_loss,\n",
+        "            'accuracy': accuracy_list,\n",
+        "            'test_loss': test_loss,\n",
+        "            'test_accuracy':test_accuracy\n",
+        "            }, PATH)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')\n",
+        "PATH = '/content/gdrive/My Drive/RESNET_BTSD.pt'\n",
+        "torch.save({\n",
+        "            'model_state_dict': model.state_dict(),\n",
+        "            'optimizer_state_dict': optimizer.state_dict(),\n",
+        "            'loss': train_loss,\n",
+        "            'accuracy': accuracy_list,\n",
+        "            'test_loss': test_loss,\n",
+        "            'test_accuracy':test_accuracy\n",
+        "            }, PATH)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M0vmkc43vV6T",
+        "outputId": "e6873ac3-c79f-4c30-e770-fb6f7b10a30d"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
       "provenance": []
     },
     "gpuClass": "standard",
