--- a/Resnet/resnet18_GTSRB.ipynb
+++ b/Resnet/resnet18_GTSRB.ipynb
@@ -147,13 +147,14 @@
         "train_path = '/content/Training'\n",
         "\n",
         "preprocess = transforms.Compose([\n",
-        "    transforms.Resize((224,224)),\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(\n",
-        "        mean=[0.4914, 0.4822, 0.4465],\n",
-        "        std=[0.2023, 0.1994, 0.2010],\n",
-        "    ),\n",
-        "])\n",
+        "      transforms.Resize(256),\n",
+        "      transforms.RandomHorizontalFlip(),\n",
+        "      transforms.RandomVerticalFlip(),\n",
+        "      transforms.RandomAutocontrast(),\n",
+        "      transforms.CenterCrop(224),\n",
+        "      transforms.ToTensor(),\n",
+        "      transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+        "  ])\n",
         "\n",
         "\n",
         "\n",
