done some changes

--- a/Vgg16/vgg16_rmastif.ipynb
+++ b/Vgg16/vgg16_rmastif.ipynb
@@ -5813,25 +5813,13 @@
       },
       "outputs": [],
       "source": [
-        "PATH = '/content/Vgg_rmastif.pt'\n",
+        "PATH = '/content/Vgg16_rmastif.pt'\n",
         "torch.save({\n",
         "            'loss': train_loss,\n",
         "            'accuracy': accuracy_list,\n",
         "            'test_loss': test_loss,\n",
         "            'test_accuracy':test_accuracy\n",
         "            }, PATH)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "tW6ZWqbaTZFD"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
       ]
     },
     {
