--- a/Comparisons/comparison.ipynb
+++ b/Comparisons/comparison.ipynb
@@ -123,7 +123,7 @@
     "pyplot.xlabel(\"Steps(*100)\", fontdict=font2)\n",
     "pyplot.ylabel(\"Accuracies (%)\", fontdict=font2)\n",
     "\n",
-    "pyplot.legend([\"Accuracy of Alexnet(BTSD)\",\"Accuracy of VGG16(BTSD)\", \"Accuracy of GoogleNet(BTSD)\"], loc =\"upper right\")\n",
+    "pyplot.legend([\"Accuracy of Alexnet(BTSD)\",\"Accuracy of VGG16(BTSD)\", \"Accuracy of GoogleNet(BTSD)\"], loc =\"lower right\")\n",
     "pyplot.show()"
    ]
   },
@@ -204,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('snowFlakes')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -218,12 +218,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "323eed8add9066529202c2293b877709c468f212055a6faf881ac707e15deb25"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
